--- a/backend/Dockerfile.BackendApi
+++ b/backend/Dockerfile.BackendApi
@@ -1,7 +1,7 @@
 FROM microsoft/dotnet:2.2-sdk AS build
 WORKDIR /app
 
-COPY *.sln .
+COPY Noname15/*.sln .
 COPY Noname15/CleanCityCore/*.csproj ./CleanCityCore/CleanCityCore.csproj
 COPY Noname15/BackendApi/*.csproj ./BackendApi/BackendApi.csproj
 COPY Noname15/CleanCityTests/*.csproj ./CleanCityTests/CleanCityTests.csproj
