Securely store password for email sender

--- a/backend/Noname15/EmailSenderDaemon/EmailSenderDaemon.csproj
+++ b/backend/Noname15/EmailSenderDaemon/EmailSenderDaemon.csproj
@@ -6,7 +6,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CleanCityCore\CleanCityCore.csproj" />
+        <ProjectReference Include="..\CleanCityCore\CleanCityCore.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <None Update="secret_password.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
