--- a/backend/Dockerfile.BackendApi
+++ b/backend/Dockerfile.BackendApi
@@ -2,6 +2,7 @@ FROM microsoft/dotnet:2.2-sdk AS build
 WORKDIR /app
 
 COPY Noname15/*.sln .
+COPY Noname15/CleanCityBot/*.csproj ./CleanCityBot/CleanCityBot.csproj
 COPY Noname15/CleanCityCore/*.csproj ./CleanCityCore/CleanCityCore.csproj
 COPY Noname15/BackendApi/*.csproj ./BackendApi/BackendApi.csproj
 COPY Noname15/CleanCityTests/*.csproj ./CleanCityTests/CleanCityTests.csproj
