--- a/backend/Dockerfile.Bot
+++ b/backend/Dockerfile.Bot
@@ -1,4 +1,4 @@
-FROM microsoft/dotnet:2.2-sdk
+FROM microsoft/dotnet:2.2-sdk AS build
 WORKDIR /app
 
 COPY Noname15/*.sln .
@@ -10,10 +10,13 @@ COPY Noname15/EmailSenderDaemon/*.csproj ./EmailSenderDaemon/EmailSenderDaemon.c
 RUN dotnet restore
 
 COPY Noname15/CleanCityCore/. ./CleanCityCore
-WORKDIR /app/CleanCityCore
+COPY Noname15/CleanCityBot/. ./CleanCityBot
+WORKDIR /app/CleanCityBot
 RUN dotnet publish -c Release -o out
 
-WORKDIR /app
 
-COPY entrypoint.db.sh .
-CMD /bin/bash ./entrypoint.db.sh
+FROM microsoft/dotnet:2.2-sdk AS runtime
+WORKDIR /app
+COPY --from=build /app/CleanCityBot/out ./
+
+CMD dotnet CleanCityBot.dll
