--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,12 @@ services:
             - "8888:5000"
         depends_on: 
             - db
+    bot:
+        build:
+            context:  backend/
+            dockerfile: Dockerfile.Bot
+        depends_on: 
+            - db
     db-migration:
         build:
             context: backend/
