--- a/backend/Noname15/CleanCityCore/CleanCityCore.csproj
+++ b/backend/Noname15/CleanCityCore/CleanCityCore.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="EntityFramework" Version="6.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.3" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
