--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
             dockerfile: Dockerfile.Bot
         depends_on: 
             - db
-    bot:
+    update-responsible:
         build:
             context:  backend/
             dockerfile: Dockerfile.UpdateResponsible
